Lisättiin käännös ja korjattiin kirjoitusvirhe

--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -678,7 +678,7 @@ Olet myös yhteydessä VPN-palvelimeen, joka voi valvoa verkon käyttöäsi."</s
      <string name="open_remote_center_hint_text">Avaa Mi Kaukosäädin pyyhkäisemällä oikealle</string>
      <string name="orb_search_action">Hae toimintoa</string>
      <string name="other">Muu</string>
-     <string name="overview">Yleiskatkaus</string>
+     <string name="overview">Yleiskatsaus</string>
      <string name="phone_hint">Avaa Puhelin -sovellus pyyhkäisemällä kuvakkeesta</string>
      <string name="phone_label">Avaa Puhelin -sovellus</string>
      <string name="phone_locked_foget_password">Unohtuiko salasana?</string>
@@ -832,50 +832,50 @@ Olet myös yhteydessä VPN-palvelimeen, joka voi valvoa verkon käyttöäsi."</s
      <string name="screenshot_failed_to_save_text">Kuvakaappausta ei voi tallentaa rajoitetun tallennustilan takia.</string>
      <string name="screenshot_failed_to_save_unknown_text">Kuvakaappauksen tallentamisen aikana tapahtui virhe.</string>
      <string name="search_menu_title">Haku</string>
-     <string name="show_battery_percentage">Show embedded battery percentage</string>
-     <string name="show_battery_percentage_summary">Show battery level percentage inside the status bar icon when not charging</string>
-     <string name="show_brightness">Show brightness in Quick settings</string>
-     <string name="show_silently">Show notifications silently</string>
-     <string name="snooze_option_15_min">15 minutes</string>
-     <string name="snooze_option_1_hour">1 hour</string>
-     <string name="snooze_option_2_hour">2 hours</string>
-     <string name="snooze_option_30_min">30 minutes</string>
-     <string name="snooze_undo">UNDO</string>
-     <string name="snoozed_for_time">Snoozed for %1$s</string>
-     <string name="speed_bump_explanation">Less urgent notifications below</string>
-     <string name="ssl_ca_cert_warning">"Network may
-be monitored"</string>
-     <string name="start_dreams">Screen saver</string>
-     <string name="status_bar">Status bar</string>
-     <string name="status_bar_airplane">Airplane mode</string>
-     <string name="status_bar_alarm">Alarm</string>
-     <string name="status_bar_clear_all_button">Clear</string>
-     <string name="status_bar_clock_date_format_12">EEEE, MMMM d</string>
+     <string name="show_battery_percentage">Näytä upotetun akun prosenttiosuus</string>
+     <string name="show_battery_percentage_summary">Näytä akun prosenttiosuus tilapalkin kuvakkeen sisällä kun laitetta ei ladata</string>
+     <string name="show_brightness">Näytä kirkkaus Pika-asetuksissa</string>
+     <string name="show_silently">Näytä ilmoitukset hiljennettynä</string>
+     <string name="snooze_option_15_min">15 minuuttia</string>
+     <string name="snooze_option_1_hour">1 tunti</string>
+     <string name="snooze_option_2_hour">2 tuntia</string>
+     <string name="snooze_option_30_min">30 minuuttia</string>
+     <string name="snooze_undo">KUMOA</string>
+     <string name="snoozed_for_time">Torkutettu %1$s ajaksi</string>
+     <string name="speed_bump_explanation">Vähemmän tärkeät ilmoitukset alla</string>
+     <string name="ssl_ca_cert_warning">"Verkkoa saatetaan
+valvoa"</string>
+     <string name="start_dreams">Näytönsäästäjä</string>
+     <string name="status_bar">Tilapalkki</string>
+     <string name="status_bar_airplane">Lentokonetila</string>
+     <string name="status_bar_alarm">Hälytys</string>
+     <string name="status_bar_clear_all_button">Tyhjennä</string>
+     <string name="status_bar_clock_date_format_12">"EEEE d. MMMM'ta'"</string>
      <string name="status_bar_ethernet">Ethernet</string>
-     <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
-     <string name="status_bar_latest_events_title">Notifications</string>
-     <string name="status_bar_no_notifications_title">No notifications</string>
-     <string name="status_bar_notification_app_settings_title">%s settings</string>
-     <string name="status_bar_ongoing_events_title">Ongoing</string>
+     <string name="status_bar_input_method_settings_configure_input_methods">Määritä syöttötavat</string>
+     <string name="status_bar_latest_events_title">Ilmoitukset</string>
+     <string name="status_bar_no_notifications_title">Ei ilmoituksia</string>
+     <string name="status_bar_notification_app_settings_title">%s asetukset</string>
+     <string name="status_bar_ongoing_events_title">Meneillään</string>
      <string name="status_bar_settings_auto_brightness_label">AUTO</string>
-     <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
-     <string name="status_bar_settings_mute_label">MUTE</string>
-     <string name="status_bar_settings_notifications">Notifications</string>
-     <string name="status_bar_settings_settings_button">Settings</string>
-     <string name="status_bar_settings_wifi_button">WLAN</string>
-     <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
-     <string name="status_bar_work">Work profile</string>
-     <string name="stream_accessibility">Accessibility</string>
-     <string name="stream_alarm">Alarm</string>
+     <string name="status_bar_settings_auto_rotation">Näytön automaattinen kierto</string>
+     <string name="status_bar_settings_mute_label">MYKISTÄ</string>
+     <string name="status_bar_settings_notifications">Ilmoitukset</string>
+     <string name="status_bar_settings_settings_button">Asetukset</string>
+     <string name="status_bar_settings_wifi_button">Wi-Fi</string>
+     <string name="status_bar_use_physical_keyboard">Fyysinen näppäimistö</string>
+     <string name="status_bar_work">Työprofiili</string>
+     <string name="stream_accessibility">Esteettömyys</string>
+     <string name="stream_alarm">Hälytys</string>
      <string name="stream_bluetooth_sco">Bluetooth</string>
-     <string name="stream_dtmf">Dual multitone frequency</string>
+     <string name="stream_dtmf">Dual multitone -taajuus</string>
      <string name="stream_music">Media</string>
-     <string name="stream_notification">Notification</string>
-     <string name="stream_ring">Ring</string>
-     <string name="stream_system">System</string>
-     <string name="stream_system_enforced">System enforced</string>
-     <string name="stream_tts">Transmitted Through Speaker</string>
-     <string name="stream_voice_call">Call</string>
+     <string name="stream_notification">Ilmoitus</string>
+     <string name="stream_ring">Soitto</string>
+     <string name="stream_system">Järjestelmä</string>
+     <string name="stream_system_enforced">Järjestelmän pakottama</string>
+     <string name="stream_tts">Lähetetään kaiuttimen kautta</string>
+     <string name="stream_voice_call">Puhelu</string>
      <string name="structure_face_data_delete_fail">人脸删除失败，请稍后重试</string>
      <string name="structure_face_data_input_down">低头</string>
      <string name="structure_face_data_input_error_away_screen">请稍微远离手机屏幕</string>
@@ -904,33 +904,33 @@ be monitored"</string>
      <string name="structure_face_delete_data_dialog_msg">摄像头加载失败，无法获取预览界面，请重试</string>
      <string name="structure_face_delete_data_dialog_msg_retry">重试</string>
      <string name="structure_face_delete_data_dialog_title">摄像头加载失败</string>
-     <string name="switch_bar_off">Off</string>
-     <string name="switch_bar_on">On</string>
+     <string name="switch_bar_off">Pois käytöstä</string>
+     <string name="switch_bar_on">Käytössä</string>
      <string name="symbol_colon">:</string>
-     <string name="system_ui_tuner">System UI Tuner</string>
-     <string name="theme">Theme</string>
-     <string name="thermal_shutdown_dialog_message">"Your phone was too hot, so it turned off to cool down. Your phone is now running normally.
+     <string name="system_ui_tuner">Järjestelmän UI-viritin</string>
+     <string name="theme">Teema</string>
+     <string name="thermal_shutdown_dialog_message">"Puhelimesi oli liian kuuma, jonka takia se sammutti itsensä viilentyäkseen. Puhelimesi toimii nyt normaalisti.
 
-Your phone may get too hot if you:
-\u0009• Use resource-intensive apps (such as gaming, video, or navigation apps)
-\u0009• Download or upload large files
-\u0009• Use your phone in high temperatures"</string>
-     <string name="thermal_shutdown_message">Your phone is now running normally</string>
-     <string name="thermal_shutdown_title">Phone turned off due to heat</string>
-     <string name="tuner_app">%1$s app</string>
-     <string name="tuner_circle">Circle</string>
-     <string name="tuner_doze">Ambient Display</string>
-     <string name="tuner_doze_always_on">Always on</string>
-     <string name="tuner_full_importance_settings">Power notification controls</string>
-     <string name="tuner_full_importance_settings_off">Off</string>
-     <string name="tuner_full_importance_settings_on">On</string>
-     <string name="tuner_full_zen_title">Show with volume controls</string>
-     <string name="tuner_launch_app">Launch %1$s</string>
-     <string name="tuner_left">Left</string>
-     <string name="tuner_lock_screen">Lock screen</string>
-     <string name="tuner_menu">Menu</string>
-     <string name="tuner_minus">Minus</string>
-     <string name="tuner_other_apps">Other apps</string>
+Puhelimesi voi kuumentua liikaa jos:
+\u0009• Käytät resurssi-intensiivisiä sovelluksia (kuten peli-, video- tai navigointisovelluksia)
+\u0009• Lataat tai lähetät suuria tiedostoja
+\u0009• Käytät puhelintasi korkeassa lämpötilassa"</string>
+     <string name="thermal_shutdown_message">Puhelimesi toimii nyt normaalisti</string>
+     <string name="thermal_shutdown_title">Puhelin sammui kuumentumisen takia</string>
+     <string name="tuner_app">%1$s sovellus</string>
+     <string name="tuner_circle">Ympyrä</string>
+     <string name="tuner_doze">Ambient-näyttö</string>
+     <string name="tuner_doze_always_on">Aina päällä</string>
+     <string name="tuner_full_importance_settings">Ilmoituksien hallinta</string>
+     <string name="tuner_full_importance_settings_off">Pois käytöstä</string>
+     <string name="tuner_full_importance_settings_on">Käytössä</string>
+     <string name="tuner_full_zen_title">Näytä äänenvoimakkuudensäätimien kanssa</string>
+     <string name="tuner_launch_app">Käynnistä %1$s</string>
+     <string name="tuner_left">Vasen</string>
+     <string name="tuner_lock_screen">Lukitusnäyttö</string>
+     <string name="tuner_menu">Valikko</string>
+     <string name="tuner_minus">Miinus</string>
+     <string name="tuner_other_apps">Muut sovellukset</string>
      <string name="tuner_persistent_warning">These experimental features may change, break, or disappear in future releases. Proceed with caution.</string>
      <string name="tuner_plus">Plus</string>
      <string name="tuner_right">Right</string>
