Mms.apk MIUI 10 valmis

--- a/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Mms.apk/res/values-fi-rFI/strings.xml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- ei vielä käännetty -->
-  <string name="notification_channel_description">Notifications from Messaging</string>
-  <string name="notification_channel_name">Messaging</string>
-  <string name="notification_copy">Copy OTP</string>
+  <!-- MIUI 10 valmis -->
+  <string name="notification_channel_description">Ilmoituksia Viestit - sovelluksesta</string>
+  <string name="notification_channel_name">Viestit</string>
+  <string name="notification_copy">Kopioi OTP</string>
   <string name="status_bar_notification_info_overflow">999+</string>
-  <string name="toast_pending_hangup_msg">Message will be sent after the call ends</string>
-  <string name="url_scan_again">Check again</string>
-  <!-- ei vielä käännetty -->
+  <string name="toast_pending_hangup_msg">Viesti lähetetään puhelun päätyttyä</string>
+  <string name="url_scan_again">Tarkista uudelleen</string>
+  <!-- MIUI 10 valmis -->
   <string name="action_firewall_setting">Estolista</string>
   <string name="activity_not_found">Tälle toiminnolle ei löytynyt sovellusta</string>
   <string name="activity_not_found_uri">Tälle toiminnolle ei löytynyt sovellusta</string>
