--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -1,15 +1,15 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- ei vielä käännetty -->
+  <!-- MIUI 10 valmis -->
   <string name="app_name">miot-device-lib</string>
      <string name="book_arr_city">目的地</string>
      <string name="book_dep_city">出发地</string>
      <string name="didi_app_name">DiDi</string>
-     <string name="express_setting_other">Other</string>
+     <string name="express_setting_other">Muu</string>
      <string name="miot_device_add_device">添加设备</string>
      <string name="miot_device_all_device">全部设备</string>
      <string name="miot_device_cancel">取消</string>
-     <string name="miot_device_card_title">mi home</string>
+     <string name="miot_device_card_title">Mi Home</string>
      <string name="miot_device_cta_and">及</string>
      <string name="miot_device_cta_message">将智能设备添加至此，实现快捷操控。如您点击“授权开启”则表示您同意米家APP</string>
      <string name="miot_device_cta_priv">隐私协议</string>
@@ -26,8 +26,8 @@
      <string name="miot_device_mijia_uninstall_title">尚未安装</string>
      <string name="miot_device_network_error">当前网络未连接</string>
      <string name="miot_device_shrink_list">收起列表</string>
-     <string name="net_unavailable">"Couldn't connect to the network."</string>
-     <!-- ei vielä käännetty -->
+     <string name="net_unavailable">Verkkoyhteyttä ei voitu muodostaa.</string>
+     <!-- MIUI 10 valmis -->
   <string name="access_change_text" formatted="false">当前选中的是第%d项, 与第%d项交换位置.</string>
   <string name="access_select">Valittiin %s</string>
   <string name="access_unselect">Poistettiin valinta %s</string>
