--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -1,36 +1,36 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <!-- ei vielä käännetty -->
-  <string name="aod_mode_time_summary">Schedule time when your device should switch to Always on mode</string>
-     <string name="aod_mode_time_title">Schedule</string>
-     <string name="aod_mode_turn_off">Off</string>
-     <string name="aod_mode_turn_on">On</string>
-     <string name="miui_lab_drive_mode_desc">Use voice controls &amp; listen to WeChat messages</string>
-     <string name="miui_lab_drive_mode_title">Car mode</string>
-     <string name="miui_lab_super_resolution_desc">Make images crisper</string>
-     <string name="miui_lab_super_resolution_title">Super resolution</string>
-     <string name="navigation_guide_appswitch_summary">Swipe left or right from the edge of the screen and hold for a while</string>
-     <string name="navigation_guide_appswitch_title">Switch to previous app</string>
-     <string name="paper_mode_side_effect_hint">Higher intensity might affect the way content is displayed.</string>
-     <string name="status_bar_carrier_settings_no_sim_card">No SIM card</string>
-     <string name="status_bar_settings_show_carrier_under_keyguard">Show carrier when device is locked</string>
-     <string name="structure_add_facerecoginition_text">Add 3D face data</string>
-     <string name="super_resolution_access_title">Accessible apps</string>
-     <string name="super_resolution_desc">Make images crisper using an AI algorithm</string>
-     <string name="super_resolution_maintain">"Super resolution isn't available yet."</string>
-     <string name="super_resolution_no_app_tips">Download WeChat and Toutiao first.</string>
-     <string name="super_resolution_reboot_tips">Restart apps to make this feature work after you turn it on.</string>
-     <string name="super_resolution_title">Super resolution</string>
-     <string name="wifi_assistant">WLAN assistant</string>
-     <string name="wifi_assistant_auto_confirm_data_message">This WLAN network has no access to the internet. Your device will use mobile data instead. You can turn off WLAN assistant in the Settings.</string>
-     <string name="wifi_assistant_confirm_always">"Don't show again"</string>
-     <string name="wifi_assistant_confirm_connection_title">Confirm</string>
-     <string name="wifi_assistant_data_prompt">Show data usage warning</string>
-     <string name="wifi_assistant_data_prompt_summary">Show data usage warning when WLAN assistant switches to mobile data</string>
-     <string name="wifi_assistant_description">"Here's how WLAN assistant works:
-1. When WLAN connection is poor, WLAN assistant will try to connect your device to other available WLAN networks.
-2. If all available WLAN connections turn out to be poor and mobile data is turned on, WLAN assistant will switch to mobile data."</string>
-     <string name="wifi_assistant_disconnect">Disconnect</string>
+  <string name="aod_mode_time_summary">Ajasta milloin laitteesi tulisi siirtyä Aina päällä -tilaan</string>
+     <string name="aod_mode_time_title">Ajastus</string>
+     <string name="aod_mode_turn_off">Pois käytöstä</string>
+     <string name="aod_mode_turn_on">Käytössä</string>
+     <string name="miui_lab_drive_mode_desc">Käytä ääniohjausta &amp; kuuntele WeChat viestejä</string>
+     <string name="miui_lab_drive_mode_title">Autotila</string>
+     <string name="miui_lab_super_resolution_desc">Tee kuvista terävempiä</string>
+     <string name="miui_lab_super_resolution_title">Super-resoluutio</string>
+     <string name="navigation_guide_appswitch_summary">Pyyhkäise näytön reunalta vasemmalle tai oikealla ja pidä hetken ajan painettuna</string>
+     <string name="navigation_guide_appswitch_title">Siirry edelliseen sovellukseen</string>
+     <string name="paper_mode_side_effect_hint">Suurempi voimakkuus voi vaikuttaa tapaan, jolla sisältö näkyy.</string>
+     <string name="status_bar_carrier_settings_no_sim_card">Ei SIM-korttia</string>
+     <string name="status_bar_settings_show_carrier_under_keyguard">Näytä operaattori laitteen ollessa lukittuna</string>
+     <string name="structure_add_facerecoginition_text">Lisää 3D kasvojen tiedot</string>
+     <string name="super_resolution_access_title">Käytettävissä olevat sovellukset</string>
+     <string name="super_resolution_desc">Tee kuvista tarkempia käyttäen AI-algoritmeja</string>
+     <string name="super_resolution_maintain">Super-resoluutio ei ole vielä käytettävissä.</string>
+     <string name="super_resolution_no_app_tips">Lataa WeChat ja Toutiao ensin.</string>
+     <string name="super_resolution_reboot_tips">Toiminnon käyttöön ottamisen jälkeen käynnistä sovellukset uudelleen, jotta se tulee voimaan.</string>
+     <string name="super_resolution_title">Super-resoluutio</string>
+     <string name="wifi_assistant">Wi-Fi avustaja</string>
+     <string name="wifi_assistant_auto_confirm_data_message">Tällä Wi-Fi-verkolla ei ole internetiä. Laitteesi käyttää mobiilidataa sen sijaan. Voit poistaa Wi-Fi avustajan käytöstä Asetuksista.</string>
+     <string name="wifi_assistant_confirm_always">Älä näytä uudelleen</string>
+     <string name="wifi_assistant_confirm_connection_title">Vahvista</string>
+     <string name="wifi_assistant_data_prompt">Näytä tiedonsiirtovaroitus</string>
+     <string name="wifi_assistant_data_prompt_summary">Näytä tiedonsiirtovaroitus, kun Wi-Fi avustaja vaihtaa mobiilidataan</string>
+     <string name="wifi_assistant_description">"Näin Wi-Fi avustaja toimii:
+1. Kun Wi-Fi-yhteys on heikko, Wi-Fi avustaja yrittää yhdistää laitteesi toisiin käytettävissä oleviin Wi-Fi-verkkoihin.
+2. Jos kaikki käytettävissä olevat Wi-Fi-yhteydet ovat heikkoja ja mobiilidata on otettu käyttöön, Wi-Fi avustaja vaihtaa mobiilidataan."</string>
+     <string name="wifi_assistant_disconnect">Katkaise yhteys</string>
      <string name="wifi_assistant_explicitly_confirm_data_message">This WLAN network has no access to the internet. Use mobile data instead?</string>
      <string name="wifi_assistant_explicitly_confirm_disconnect">This WLAN network has no access to the internet. Disconnect now?</string>
      <string name="wifi_assistant_explicitly_confirm_wifi_message">This WLAN network has no access to the internet. Other WLAN networks are available. Switch networks?</string>
